...
              lazyListState.animateScrollToItem(0)
            } else if (flightTypeValueError) {
              lazyListState.animateScrollToItem(3)
            }
          }
          LazyColumn(
              modifier = Modifier.padding(padding).weight(1f).testTag("Flight Lazy Column"),
              state = lazyListState,
              verticalArrangement = Arrangement.SpaceBetween) {
                // Field getting the number of passengers. Only number can be entered
                item {
                  nbPassengersField(
                      nbPassengersValue = nbPassengersValue,
...
    onNbPassengersValueChange: (String) -> Unit,
    nbPassengersValueError: Boolean,
    defaultPadding: Dp
) {
  Text(
      modifier = Modifier.padding(horizontal = defaultPadding),
      text = "Number of passengers",
      style = MaterialTheme.typography.headlineSmall)
  OutlinedTextField(
      value = nbPassengersValue,
      onValueChange = { value -> onNbPassengersValueChange(value) },
      placeholder = { Text("Enter a number bigger than 0") },
      singleLine = true,
...
      text = "Date",
      style = MaterialTheme.typography.headlineSmall)
  if (openDatePicker) {

    DatePickerDialog(
        onDismissRequest = {},
        confirmButton = { TextButton(onClick = onclickConfirm) { Text("OK") } },
        dismissButton = { TextButton(onClick = onclickDismiss) { Text("Cancel") } }) {
          // The date picker is only available for the current date and later
          val todayDate =
              Instant.ofEpochMilli(today)
                  .atZone(ZoneId.of("GMT"))
                  .toLocalDate()
...

  OutlinedTextField(
      modifier =
          Modifier.fillMaxWidth()
              .padding(defaultPadding)
              .clickable(onClick = onclickField)
              .testTag("Date Field"),
      enabled = false,
      value =
          String.format(
              "%02d/%02d/%04d", dateValue.dayOfMonth, dateValue.monthValue, dateValue.year),
      onValueChange = {})
}
...
