...
        modifier = Modifier.fillMaxWidth(),
        horizontalArrangement = Arrangement.SpaceBetween,
        verticalAlignment = Alignment.CenterVertically) {
          ClickButton(
              text = "Delete",
              onClick = { deleteClick() },
              modifier = Modifier.fillMaxWidth(0.3f).testTag("DeleteButton"),
              color = Color.Red)
          ClickButton(
              text = "Edit",
              onClick = { editClick() },
              modifier = Modifier.fillMaxWidth(3 / 7f).testTag("EditButton"),
              color = Color.Yellow)
          ClickButton(
              text = "Confirm",
              onClick = { confirmClick() },
              modifier = Modifier.fillMaxWidth(0.7f).testTag("ConfirmButton"),
              color = Color.Green)
...
