...
 * @param cardColor The color to be used for the card background.
 */
@Composable
fun GlobalFlightMetricsDetails(flight: Flight, cardColor: Color) {
  val metrics =
      mapOf(
          "Flight status" to flight.getFlightStatus().text,
          "Day of flight" to DateUtility.localDateToString(flight.date),
          "Time slot" to flight.timeSlot.toString(),
          "Number of Passengers" to "${flight.nPassengers}",
          "Flight type" to flight.flightType.name,
          "Balloon" to (flight.balloon?.name ?: "Unset"),
          "Basket" to (flight.basket?.name ?: "Unset"))
...
