...
        paddingValues = paddingValues)
    Spacer(modifier = Modifier.fillMaxHeight(0.02f))

    OutlinedTextField(
        value = searchQuery,
        onValueChange = { searchQuery = it },
        label = { Text("Search") },
        colors =
            OutlinedTextFieldDefaults.colors(
                focusedBorderColor = lightOrange, focusedLabelColor = lightOrange),
        modifier = Modifier.fillMaxWidth().testTag("Search"),
        keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done))
    val filteredGroups = groupList.filter { it.name.contains(searchQuery, ignoreCase = true) }
    Spacer(modifier = Modifier.fillMaxHeight(0.05f))
    if (filteredGroups.isEmpty() && searchQuery.isEmpty()) {
      LoadingComponent(isLoading = true, onRefresh = { /*TODO*/}) {}
    } else {
      GroupChatBody(
          groupList = filteredGroups,
          onClick = onClick,
          onDelete = onDelete,
          activeGroupId = activeGroupId,
          onSetActiveGroupId = { activeGroupId = it },
          isAdmin)
...
